pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_backend_with_settings.snap
---
source: tests/config/backend_tests.rs
expression: "make_snapshot!(input, backend)"
---
Input:
[test.nixos]
check = "./check.sh"
serialize = "./serialize.sh"

[test.settings]
key = "value"
another = 123

Parsed:
BackendEntry {
    nixos: Some(
        TargetConfig {
            enabled: None,
            check: Some(
                "/tmp/FILTERED/./check.sh",
            ),
            serialize: Some(
                "/tmp/FILTERED/./serialize.sh",
            ),
        },
    ),
    home: None,
    shared: None,
    settings: BackendSettings(
        {
            "key": String("value"),
            "another": Number(123),
        },
    ),
}
