pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_disabled_shared_target.snap
---
source: tests/config/backend_tests.rs
expression: "make_snapshot!(input, backend)"
---
Input:
[test.nixos]
check = "./check.sh"
serialize = "./serialize.sh"

[test.shared]
enabled = false
check = "./shared_check.sh"
serialize = "./shared_serialize.sh"

Parsed:
BackendEntry {
    nixos: Some(
        TargetConfig {
            enabled: None,
            check: Some(
                "/tmp/FILTERED/./check.sh",
            ),
            serialize: Some(
                "/tmp/FILTERED/./serialize.sh",
            ),
        },
    ),
    home: None,
    shared: Some(
        TargetConfig {
            enabled: Some(
                false,
            ),
            check: Some(
                "/tmp/FILTERED/./shared_check.sh",
            ),
            serialize: Some(
                "/tmp/FILTERED/./shared_serialize.sh",
            ),
        },
    ),
}
