pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_empty_backend_section.snap
---
source: tests/config/backend_tests.rs
expression: "make_snapshot!(input, backend)"
---
Input:
[test]

Parsed:
BackendEntry {
    nixos: None,
    home: None,
    shared: None,
}
