pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_error_check_without_serialize.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
Input:
[test.nixos]
check = "./check.sh"

Result:
Err(backend 'test.nixos': 'check' requires 'serialize' to be defined)
