pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_error_serialize_without_check.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
Input:
[test.nixos]
serialize = "./serialize.sh"

Result:
Err(backend 'test.nixos': 'serialize' requires 'check' to be defined)
