pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_inferred_enabled_from_scripts.snap
---
source: tests/config/backend_tests.rs
expression: "make_snapshot!(input, backend)"
---
Input:
[test.nixos]
check = "./check.sh"
serialize = "./serialize.sh"

[test.home]
enabled = true

Parsed:
BackendEntry {
    nixos: Some(
        TargetConfig {
            enabled: None,
            check: Some(
                "/tmp/FILTERED/./check.sh",
            ),
            serialize: Some(
                "/tmp/FILTERED/./serialize.sh",
            ),
        },
    ),
    home: Some(
        TargetConfig {
            enabled: Some(
                true,
            ),
            check: None,
            serialize: None,
        },
    ),
    shared: None,
}
